--- a/style/mod3.css
+++ b/style/mod3.css
@@ -1,1 +1,12 @@
-//
+pre {
+  background-color: red;
+  border-style:inset;
+}
+p {
+  background-color: red;
+  border-style:inset;
+}
+body {
+  background-color: red;
+  border-style:inset;
+}
