--- a/style/mod4.css
+++ b/style/mod4.css
@@ -1,15 +1,18 @@
-pre {
-  background-color: yellow;
-  border-style:inset;
+var x;
+
+function changecolors() {
+    x = 1;
+    setInterval(change, 1000);
 }
-p {
-  background-color: yellow;
-  border-style:inset;
-}
-body {
-  background-color: yellow;
-  border-style:inset;
-}
-Video {
-  display:block:
+
+function change() {
+    if (x === 1) {
+        color = "red";
+        x = 2;
+    } else {
+        color = "green";
+        x = 1;
+    }
+
+    document.body.style.background = color;
 }
