--- a/style/mod8.css
+++ b/style/mod8.css
@@ -1,1 +1,15 @@
-//
+pre {
+  background-color: red;
+  border-style:inset;
+}
+p {
+  background-color: red;
+  border-style:inset;
+}
+body {
+  background-color: red;
+  border-style:inset;
+}
+Video {
+  display:block:
+}
